<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/collage_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@font/roboto_light"
            android:text="@string/About_Collage"
            android:textColor="@color/textColor"
            android:textSize="20sp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="@dimen/text_margin">



            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="7dp"
                android:src="@drawable/label"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="7dp"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_weight="1"
                android:text="Have a look to the Departments we have" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3CDCD"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/archivo_black"
            android:text="Branch"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_size" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="***********"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:textColor="@color/textColor" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/text_margin"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3CDCD"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="Slide >>"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size01"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Details"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@string/bold"/>

        <TextView
            android:layout_width="301dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@font/roboto_light"
            android:text="Contact - +91-240- 2353644 (Principal)"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@font/roboto_light"
            android:text="Adress - Osmanpura, P.B. No. Aurangabad – 431005, Maharastra Sate, India"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/email_principal_gpaurangabad_dtemaharashtra_gov_in"
            android:textColor="@color/textColor"
            android:textSize="14sp" />




    </LinearLayout>
</androidx.core.widget.NestedScrollView>